# agent-basil

./: .gitignore  NOTICE  README.md  pyproject.toml  setup.cfg
agent_basil/: config.py
agent_basil/components/: agent.py  graph.py  llm.py  mcp_tools.py  tools.py
agent_basil/domain/: graph_state.py
agent_basil/entrypoint/: main.py
agent_basil/services/: graph_service.py  mcp_service.py
